Fix Import Account view on mobile

--- a/src/assets/css/limit-order.scss
+++ b/src/assets/css/limit-order.scss
@@ -369,6 +369,10 @@
 
         &__item {
             width: 135px;
+
+            @include screen-max-width(medium) {
+                width: 100%;
+            }
         }
 
         &__name {
